--- a/.htaccess
+++ b/.htaccess
@@ -6,10 +6,10 @@ ServerSignature Off
     Deny From All
 </Files>
 
-<Files *.php>
-    Order Deny,Allow
-    Deny From All
-</Files>
+# <Files *.php>
+#     Order Deny,Allow
+#     Deny From All
+# </Files>
 
 <IfModule mod_php5.c>
   php_value  magic_quotes_runtime   "0"
