--- a/.htaccess
+++ b/.htaccess
@@ -21,8 +21,9 @@ ServerSignature Off
 </IfModule>
 
 <IfModule mod_rewrite.c>  
+  # TODO: prohibir el acceso directo a index.php
   RewriteEngine On  
   RewriteBase /
   RewriteCond %{REQUEST_FILENAME} !-f
-  RewriteRule .* index.php/$0
+  RewriteRule .* index.php?%{QUERY_STRING}
 </IfModule>
