--- a/.htaccess
+++ b/.htaccess
@@ -25,6 +25,16 @@ ServerSignature Off
   # TODO: prohibir el acceso directo a index.php
   RewriteEngine On  
   RewriteBase /
+  
+  RewriteCond %{HTTP_HOST} ^([0-9\.]*) [NC]
+  RewriteCond %{HTTP_HOST} ^(.*).ovh.net [NC]
+  RewriteCond %{HTTP_HOST} ^([alf\.]*)goteo.org [NC]
+  RewriteRule ^(.*)$ http://www.goteo.org/$1 [R=301,L]
+
+  RewriteCond %{HTTPS} !=on
+  RewriteCond %{HTTP_HOST} ^www\.(.+)$ [NC]
+  RewriteRule ^(.*)$ http://%1/$1 [R=301,L]
+
   RewriteCond %{REQUEST_FILENAME} !-f
   RewriteRule .* index.php?%{QUERY_STRING}
 </IfModule>
