--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 /data/
 /controller/tpv_sermepa.php
+/library/tpv_caja_laboral.php
+/library/tpv/wshandler_cjlaboral.php
 /view/css/goteo.min.css
 /nodesys/_*
 local-settings.php
