--- a/package.json
+++ b/package.json
@@ -20,12 +20,21 @@
     "node": ">= 0.10.0"
   },
   "devDependencies": {
-    "grunt": "~0.4.5",
-    "grunt-contrib-concat": "~0.4.0",
+    "grunt": "^0.4.5",
+    "grunt-banner": "^0.2.3",
+    "grunt-chmod": "^1.0.3",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-concat": "^0.5.0",
+    "grunt-contrib-copy": "^0.7.0",
+    "grunt-contrib-cssmin": "^0.10.0",
+    "grunt-contrib-imagemin": "^0.9.1",
     "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-uglify": "~0.5.0",
-    "grunt-contrib-watch": "~0.6.1",
+    "grunt-contrib-uglify": "^0.6.0",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-newer": "^0.8.0",
     "grunt-phplint": "0.0.5",
+    "grunt-sync": "^0.2.0",
+    "jshint-stylish": "^1.0.0",
     "matchdep": "^0.3.0"
   }
 }
