--- a/package.json
+++ b/package.json
@@ -31,10 +31,13 @@
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-uglify": "^0.6.0",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-filerev": "^2.1.1",
     "grunt-newer": "^0.8.0",
+    "grunt-notify": "^0.3.1",
     "grunt-php": "^1.1.1",
     "grunt-phplint": "0.0.5",
     "grunt-sync": "^0.2.0",
+    "grunt-usemin": "^2.6.0",
     "jshint-stylish": "^1.0.0",
     "matchdep": "^0.3.0",
     "time-grunt": "^1.0.0"
