--- a/composer.json
+++ b/composer.json
@@ -1,3 +1,17 @@
 {
 
+    "require": {
+        "tpyo/amazon-s3-php-class": "~0.5"
+    },
+
+    "autoload": {
+        "psr-4": {"": "src/"}
+    },
+
+    "require-dev": {
+
+    
+    "phpunit/phpunit": "~4.3"
+
+    }
 }
