--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@ composer.lock
 config
 !config/README
 !config/demo-settings.yml
+!config/demo-settings.php
+!config/paypal.php
 dist
 
 app/data/*
