--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-aws-s3": "^0.9.4",
     "grunt-banner": "^0.2.3",
     "grunt-chmod": "^1.0.3",
     "grunt-contrib-clean": "^0.6.0",
