--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -11,11 +11,11 @@
     processIsolation            = "false"
     stopOnFailure               = "false"
     syntaxCheck                 = "false"
-    bootstrap                   = "app/autoload.php">
+    bootstrap                   = "tests/bootstrap.php">
 
     <testsuites>
         <testsuite name="Test Suite">
-            <directory>src/*/Tests</directory>
+            <directory>tests</directory>
         </testsuite>
     </testsuites>
 
