--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,10 @@
         "tpyo/amazon-s3-php-class": "~0.5",
 
     
-    "phpmailer/phpmailer": "~5.2"
+    "phpmailer/phpmailer": "~5.2",
+
+    
+    "jdorn/file-system-cache": "dev-master"
     },
 
     "autoload": {
