--- a/composer.json
+++ b/composer.json
@@ -3,11 +3,15 @@
     "require": {
         "tpyo/amazon-s3-php-class": "~0.5",
 
-    
+
     "phpmailer/phpmailer": "~5.2",
 
-    
-    "jdorn/file-system-cache": "dev-master"
+
+    "jdorn/file-system-cache": "dev-master",
+
+
+    "intervention/image": "~2.0"
+
     },
 
     "autoload": {
@@ -16,7 +20,7 @@
 
     "require-dev": {
 
-    
+
     "phpunit/phpunit": "~4.3"
 
     }
