--- a/.gitignore
+++ b/.gitignore
@@ -3,13 +3,11 @@
 /bower_components/
 *.log
 .tmp
-var
-!var/logs/README
-!var/cache/README
-!var/data/README
-!var/php/php.ini
-!var/php/router.php
-!var/php/router_dev.php
+var/*
+!var/logs
+!var/cache
+!var/data
+!var/php
 composer.lock
 
 config/*
