--- a/composer.json
+++ b/composer.json
@@ -12,13 +12,15 @@
 
     "intervention/image": "~2.0",
 
-    
+
     "mibe/feedwriter": "~1.0"
 
     },
 
     "autoload": {
-        "psr-4": {"": "src/"}
+        "psr-4": {
+            "": ["src/"]
+        }
     },
 
     "require-dev": {
