linea en composer para traer el sdk de paypal a vendor ! checkout branch namespace-php5.3

--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,9 @@
     "lightopenid/lightopenid": "~0.7",
 
     
-    "lusitanian/oauth": "~0.3"
+    "lusitanian/oauth": "~0.3",
+	
+	"paypal/adaptivepayments-sdk-php": "dev-namespace-php5.3"
 
     },
 
