--- a/composer.json
+++ b/composer.json
@@ -1,27 +1,32 @@
 {
 
     "require": {
+
+        "php": ">=5.4",
+
+        "ext-curl": "*",
+
         "tpyo/amazon-s3-php-class": "~0.5",
 
 
-    "phpmailer/phpmailer": "~5.2",
+        "phpmailer/phpmailer": "~5.2",
 
 
-    "jdorn/file-system-cache": "dev-master",
+        "jdorn/file-system-cache": "dev-master",
 
 
-    "intervention/image": "~2.0",
+        "intervention/image": "~2.0",
 
 
-    "mibe/feedwriter": "~1.0",
+        "mibe/feedwriter": "~1.0",
 
-    
-    "lightopenid/lightopenid": "~0.7",
 
-    
-    "lusitanian/oauth": "~0.3",
-	
-	"paypal/adaptivepayments-sdk-php": "dev-namespace-php5.3"
+        "lightopenid/lightopenid": "~0.7",
+
+
+        "lusitanian/oauth": "~0.3",
+
+        "paypal/adaptivepayments-sdk-php": "*"
 
     },
 
